# hisenspy

./: .gitignore  buildozer.spec  pyproject.toml
.github/workflows/: build.yml
hisenspy/: adbkey  adbkey.pub  buildozer.spec  main.py
