[tool.poetry]
name = "hisenspy"
version = "0.1.0"
description = ""
authors = ["sharpordie <sharpordie@example.org>"]

[tool.poetry.dependencies]
python = "^3.9"
kivymd = "^0.104.2"
adb-shell = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}
kivy-ios = "^1.3.0"
buildozer = {url = "https://github.com/kivy/buildozer/archive/master.zip"}
Cython = "0.29.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
